Update and rename link_sammlung_text to link_sammlung_v0.5

--- a/link_sammlung_v0.5
+++ b/link_sammlung_v0.5
@@ -41,7 +41,12 @@ Einkaufsliste:
 		LED-Stripe
 			Link: AliExpress - LED Streifen Lerdge-X board 24 V Länge 60 cm - https://tinyurl.com/yyarhfay
 
-
+	Druckbare Teile 
+		Kabelabdeckung Netzteil (danke Rics_3D)
+		Link: Safety addons for the TTrees Sapphire https://www.thingiverse.com/thing:3293409
+		Halte für den LED-Stripe
+		Link: LED Mount at 45° (great for Core XY)  https://www.thingiverse.com/thing:2389048
+		
 Settings:
 
 		Sammlung
@@ -129,3 +134,6 @@ Tipps und Tricks:
 			Ravenol Mehrzweckfett- ebay
 			Liqui Moly LM47 - Globus ca. 4,50 €
 			Mannol EP2 - ebay
+		Hotende richtig zusammenbauen
+			Link: Rics_3D ab 1:32:30 h https://youtu.be/3Jpzm1xaF30?t=5550
+			Link: Wärmeleitpaste https://www.ebay.de/itm/323355326512?ul_noapp=true
